samples/_failures_safe/1761414547_429d9b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fcd49ca3.c: In function ‘main’:
./samples/SAFE/__tmp_fcd49ca3.c:166:9: error: expected expression at end of input
  166 |         if (
      |         ^~
./samples/SAFE/__tmp_fcd49ca3.c:166:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fcd49ca3.c:166:9: error: expected declaration or statement at end of input
